# cmake-21.3-implementantion-math-vector

./: CMakeLists.txt  README.md
include/: functions.h  mathvector.h
src/: functions.cpp  main.cpp  mathvector.cpp
